--- a/docs/style.css
+++ b/docs/style.css
@@ -1,55 +1,104 @@
 h1 {
     background-color: aquamarine;
-    font-size: 50px;
+    font-size: 75px;
     text-align: center;
     border: 5pt dotted;
     border-color: red orange;
     border-radius: 35pt;
+
+    color: rgba(255, 255, 255, 0.9);
+    text-shadow:
+       -1px -1px 0 rgb(0, 0, 0),
+        1px -1px 0 black,
+       -1px  1px 0 black,
+        1px  1px 0 black;
+
 }
 
 p.sub {
     text-align: center;
     background-color: aliceblue;
     border: 0pt;
-    font: 10pt;
+    font: 30pt;
 }
 
 body {
-   background-image: url('imagenes/Fondo0.jpg');
+   background-image: url('imagenes/Fondo.jpg');
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
 
-   color: white;
-   padding: 20px;
+   padding: 25px;
    position: relative;
    z-index: 1;
+
+   cursor: url('imagenes/raton.jpg'), auto;
+
 }
 
 div.sentostilo1 {
-    background-color: transparent;
-    border: 10px outset gray;
-    padding: 50px;
-    margin-top: 50px;
-    box-shadow: 0 0 25px black;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+
+   color: white;
+   text-shadow:
+      -1px -1px 0 black,
+       1px -1px 0 black,
+      -1px  1px 0 black,
+       1px  1px 0 black;
+
 }
+
+blockquote.sentostilo1 {
+    background-color: rgba(0, 0, 0, 0.25);
+    border-left: 5px solid rgb(0, 255, 0);
+    text-align: center;
+    font-size: 15px;
+    padding: 10px 20px;
+    color: rgb(192, 192, 192);
+
+    width: 118ch;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    font-family: monospace;
+
+}
+
 
 h2.sentostilo1 {
-    font-size: 25px;
+   text-align: center;
+   font-size: 50px;
 }
 
-p.sentostilo1 {  
-    font-weight: bold;
-    font-size: 15px;
+
+p.sentostilo1 {
+   text-align: center;
+   font-size: 35px;
 }
 
-p.sentostilo2 {  
-   width: 90ch;
+p.sentostilo2 {
+   text-align: center;
+   font-size: 20px;
+   width: 85ch;
    word-wrap: break-word;
    overflow-wrap: break-word;
    font-family: monospace;
 }
+
+img.sentostilo1 {
+   border: 10px solid black;
+   box-shadow: 0 0 10px gray;
+   border-radius: 8px;
+   transition: transform 0.3s ease;
+}
+
+img.sentostilo1:hover {
+   transform: scale(1.10);
+}
+
 
 h2.title {
     font: red;
