--- a/docs/style.css
+++ b/docs/style.css
@@ -23,7 +23,7 @@ p.sub {
 }
 
 body {
-   background-image: url('imagenes/Fondo.jpg');
+   background-image: url('imagenes/fondo.jpg');
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
